src/styles/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));
/* @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *)); */

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
}

:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.129 0.042 264.695);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.129 0.042 264.695);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.129 0.042 264.695);
  --primary: oklch(0.208 0.042 265.755);
  --primary-foreground: oklch(0.984 0.003 247.858);
  --secondary: oklch(0.968 0.007 247.896);
  --secondary-foreground: oklch(0.208 0.042 265.755);
  --muted: oklch(0.968 0.007 247.896);
  --muted-foreground: oklch(0.554 0.046 257.417);
  --accent: oklch(0.968 0.007 247.896);
  --accent-foreground: oklch(0.208 0.042 265.755);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.929 0.013 255.508);
  --input: oklch(0.929 0.013 255.508);
  --ring: oklch(0.704 0.04 256.788);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.984 0.003 247.858);
  --sidebar-foreground: oklch(0.129 0.042 264.695);
  --sidebar-primary: oklch(0.208 0.042 265.755);
  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
  --sidebar-accent: oklch(0.968 0.007 247.896);
  --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
  --sidebar-border: oklch(0.929 0.013 255.508);
  --sidebar-ring: oklch(0.704 0.04 256.788);
  color-scheme: light dark;
}
.light {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.129 0.042 264.695);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.129 0.042 264.695);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.129 0.042 264.695);
  --primary: oklch(0.208 0.042 265.755);
  --primary-foreground: oklch(0.984 0.003 247.858);
  --secondary: oklch(0.968 0.007 247.896);
  --secondary-foreground: oklch(0.208 0.042 265.755);
  --muted: oklch(0.968 0.007 247.896);
  --muted-foreground: oklch(0.554 0.046 257.417);
  --accent: oklch(0.968 0.007 247.896);
  --accent-foreground: oklch(0.208 0.042 265.755);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.929 0.013 255.508);
  --input: oklch(0.929 0.013 255.508);
  --ring: oklch(0.704 0.04 256.788);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.984 0.003 247.858);
  --sidebar-foreground: oklch(0.129 0.042 264.695);
  --sidebar-primary: oklch(0.208 0.042 265.755);
  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
  --sidebar-accent: oklch(0.968 0.007 247.896);
  --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
  --sidebar-border: oklch(0.929 0.013 255.508);
  --sidebar-ring: oklch(0.704 0.04 256.788);
}

.dark {
  --background: oklch(0.129 0.042 264.695);
  --foreground: oklch(0.984 0.003 247.858);
  --card: oklch(0.208 0.042 265.755);
  --card-foreground: oklch(0.984 0.003 247.858);
  --popover: oklch(0.208 0.042 265.755);
  --popover-foreground: oklch(0.984 0.003 247.858);
  --primary: oklch(0.929 0.013 255.508);
  --primary-foreground: oklch(0.208 0.042 265.755);
  --secondary: oklch(0.279 0.041 260.031);
  --secondary-foreground: oklch(0.984 0.003 247.858);
  --muted: oklch(0.279 0.041 260.031);
  --muted-foreground: oklch(0.704 0.04 256.788);
  --accent: oklch(0.279 0.041 260.031);
  --accent-foreground: oklch(0.984 0.003 247.858);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.551 0.027 264.364);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.208 0.042 265.755);
  --sidebar-foreground: oklch(0.984 0.003 247.858);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
  --sidebar-accent: oklch(0.279 0.041 260.031);
  --sidebar-accent-foreground: oklch(0.984 0.003 247.858);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.551 0.027 264.364);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }

  .centered {
    display: block;
    align-content: center;
  }

  .omni-theme {
    background-color: light-dark(#fff, #000);
    color: light-dark(#000, #fff);
  }

  .checkbox {
    opacity: 0;
    position: absolute;
  }

  .checkbox-label {
    /* background-color: #f39c12; */
    /* background-color: light-dark(#000, #f39c12); */
    width: 50px;
    height: 26px;
    border-radius: 50px;
    position: relative;
    padding: 5px;
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  /* .fa-moon {
    color: #f1c40f;
  }
  
  .fa-sun {
    color: #f39c12;
  } */

  .checkbox-label .ball {
    /* background-color: light-dark(#fff, #000); */
    width: 22px;
    height: 22px;
    position: absolute;
    left: 2px;
    top: 2px;
    border-radius: 50%;
    /* transition: transform 0.2s linear; */
  }

  /* .checkbox:checked + .checkbox-label .ball.darkBall {
    transform: translateX(24px);
  } */
  .form_select_project > button {
    width: 100%;
  }
  .tiptap_editor ol,
  .bullet_list_style ol,
  .tiptap_editor ul,
  .bullet_list_style ul {
    display: block;
    list-style-type: disc;
    margin-block-start: 0.5em;
    margin-block-end: 0.5em;
    padding-inline-start: 30px;
  }
  .inbox_list.bullet_list_style ol,
  .inbox_list.bullet_list_style ul {
    padding-inline-start: 15px;
  }
  .tiptap_editor ol,
  .tiptap_editor ul {
    padding-inline-start: 15px;
    font-size: 12px;
  }
  .bullet_list_style ol,
  .tiptap_editor ol {
    list-style: decimal;
  }

  /* Placeholder (at the top) */
  .ProseMirror p.is-editor-empty:first-child::before {
    content: attr(data-placeholder);
    float: left;
    color: #adb5bd;
    pointer-events: none;
    height: 0;
    outline: none;
  }

  .tiptap_editor > .is-editor-empty {
    padding: 4px 7px !important;
    outline: none;
  }
  .tiptap_editor {
    font-size: 14px;
  }

  .bubble-menu > button {
    cursor: pointer;
    background-color: unset;
    padding: 0.275rem 0.425rem;
    border-radius: 0.3rem;
  }

  /* .bubble-menu > button:hover,
  .bubble-menu > button.is-active {
    cursor: pointer;
    background-color: light-dark(#ccc, #333);
  } */
  .ProseMirror-focused {
    outline: none !important;
  }

  .subtask-wrapper #todo {
    border-color: "#d1d5dc !important";
  }

  .action-button-wrapper {
    position: relative;
  }

  .action-name {
    position: absolute;
    top: -25px;
    right: 0;
    font-size: 12px;
    white-space: nowrap;
    /* background: #4b4b2b; */
    padding: 3px 5px;
    border-radius: 5px;
    display: none;
    color: white;
  }

  .action-button-wrapper:hover > .action-name {
    display: block;
  }
}

@layer utilities {
  .scrollbar::-webkit-scrollbar {
    width: 5px;
    /* height: 10px; */
  }

  .scrollbar::-webkit-scrollbar-track {
    border-radius: 100vh;
    background: color-mix(in oklab, var(--muted-foreground) 20%, transparent);
  }

  .scrollbar::-webkit-scrollbar-thumb {
    background: #f39c16;
    border-radius: 100vh;
    /* border: 3px solid #f6f7ed; */
  }

  .scrollbar::-webkit-scrollbar-thumb:hover {
    background: #c0a0b9;
  }
}

@layer clerk {
  /* ======= clerk overrides ======== */
  .cl-socialButtonsIconButton {
    border: 1px solid #444 !important;
  }
  .cl-socialButtonsIconButton:hover {
    border: 1px solid #f97535 !important;
  }
  .cl-button {
    color: white;
  }
  .cl-socialButtonsProviderIcon__github {
    filter: invert(1);
  }
  .cl-internal-b3fm6y {
    background: #f97535;
  }
  .cl-formButtonPrimary {
    background: #f97535;
  }
  .cl-footerActionLink {
    color: #f97535;
  }
  .cl-headerSubtitle {
    color: #c5d0e6;
  }
  .cl-logoImage {
    width: 10rem;
    height: 3rem;
  }
  .cl-internal-4a7e9l {
    color: white;
  }

  .cl-userButtonPopoverActionButtonIcon {
    color: white;
  }
  .cl-internal-wkkub3 {
    color: #f97535;
  }

  .cl-avatarBox {
    width: 36px;
    height: 36px;
  }

  .cl-internal-phfxlr {
    margin: 0 auto;
  }
}

@layer loader {
  .loader {
    width: 35px;
    height: 27px;
    display: inline-block;
    position: relative;
    background: #fff;
    border-radius: 15% 15% 35% 35%;
  }
  .loader::after {
    content: "";
    box-sizing: border-box;
    position: absolute;
    left: 32px;
    top: 5px;
    border: 2px solid #fff;
    width: 11px;
    height: 14px;
    border-radius: 0 4px 4px 0;
  }
  .loader::before {
    content: "";
    position: absolute;
    width: 1px;
    height: 8px;
    color: #fff;
    top: -12px;
    left: 4px;
    box-sizing: border-box;
    animation: animloader 1s ease infinite;
  }

  @keyframes animloader {
    0% {
      box-shadow:
        2px 0px rgba(255, 255, 255, 0),
        12px 0px rgba(255, 255, 255, 0.3),
        20px 0px rgba(255, 255, 255, 0);
    }
    50% {
      box-shadow:
        2px -5px rgba(255, 255, 255, 0.5),
        12px -3px rgba(255, 255, 255, 0.5),
        20px -2px rgba(255, 255, 255, 0.6);
    }
    100% {
      box-shadow:
        2px -8px rgba(255, 255, 255, 0),
        12px -5px rgba(255, 255, 255, 0),
        20px -5px rgba(255, 255, 255, 0);
    }
  }
}

